Criado através do Colab

--- a/PA-online/Fluxogramas.ipynb
+++ b/PA-online/Fluxogramas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhPpATeQdDfwQL2l2CseZc",
+      "authorship_tag": "ABX9TyOMFQqY8REJiI0mXR0IZHXn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,12 +105,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "##Horas extras\n",
+        "\n",
+        "##Entradas\n",
+        "horas = float(input(\"Quantas tempo de horas extras você fez? \"))\n",
+        "minutos = float(input(\"Tirando as horas, quantos minutos você tambem compriu de tempo extra?  \"))\n",
+        "valor_por_hora = float(input(\"Quanto você recebe pela hora extra? \"))\n",
+        "\n",
+        "##Processamento\n",
+        "hora_extra = horas +(minutos/60)\n",
+        "salario = (hora_extra * valor_por_hora)\n",
+        "bonus = (salario * 70/100) + salario\n",
+        "\n",
+        "##Saida\n",
+        "print(f\"Você deve receber R${bonus:.2f} de hora extra.\")"
+      ],
       "metadata": {
-        "id": "RcfyU5ivu822"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RcfyU5ivu822",
+        "outputId": "134dc54f-aabb-4e13-9c7e-27f699cb3e3d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Quantas tempo de horas extras você fez? 2\n",
+            "Tirando as horas, quantos minutos você tambem compriu de tempo extra?  35\n",
+            "Quanto você recebe pela hora extra? 150\n",
+            "Você deve receber R$658.75 de hora extra.\n"
+          ]
+        }
+      ]
     }
   ]
 }
